Revert "Fix password visibility toggle issue"

--- a/modules/dynamic-forms/src/components/dynamic-form.scss
+++ b/modules/dynamic-forms/src/components/dynamic-form.scss
@@ -20,7 +20,6 @@
         .MuiOutlinedInput-root {
             border-radius: 8px;
             font-family: Gilmer;
-            padding-right: 0;
         };
 
         .MuiOutlinedInput-input {
